@@ -108,6 +108,7 @@
      * Fixed upload PUT Print-After-Upload if already printing error
      * Added api/v1/<storage>/<path> delete endpoint
      * Fixed a semicolon in a filename being printed breaking everything
+     * Fixed a bronken RESET_PRINTER for raspis connected through USB
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
